index CSS refactored

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="fishholder">
                 <img src="images/fish.png" id="fish">
             </div>
-            <div class="move">
+            <div class="onwardlink">
                 <a href="blurb/blurb.html">Dive in...</a>
             </div>
         </div>
